Fixed text visibility when reading messages

--- a/styles/index.less
+++ b/styles/index.less
@@ -89,10 +89,6 @@ select {
   border-color: @text-color;
 }
 
-body #inbox-html-wrapper {
-  font-weight: 100 !important;
-}
-
 .heading span:first-child {
   font-weight: 700;
 }
