--- a/styles/message-view.less
+++ b/styles/message-view.less
@@ -6,6 +6,15 @@
   border-top: none !important;
 }
 
+:root {
+  iframe {
+    background-color: #fff !important;
+    padding: 20px !important;
+    color: @background  !important;
+    font-weight: bold !important;
+  }
+}
+
 #message-list {
   overflow: hidden;
   background: inherit;
@@ -39,11 +48,6 @@
 
   }
 
-  .message-iframe-container iframe #inbox-html-wrapper {
-    font-weight: 300 !important;
-    background: opacity(0.9);
-  }
-
   .message-item-wrap.collapsed .message-item-white-wrap {
     background: @background-primary-unfocus;
   }
@@ -66,7 +70,7 @@
   }
 
   .footer-reply-area-wrap {
-    background: @background-dark;
+    background: @background-lighten;
     border: none;
     margin: 0;
     border-bottom-left-radius: @border-radius;
